# steamdeckhengst

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.sh  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game-handler-request.md
res/: SteamDeckHengstKWinLaunch.sh  splitscreen_kwin.js  splitscreen_kwin_horizontal.js
src/: game.rs  handler.rs  image_cache.rs  input.rs  launch.rs  main.rs  paths.rs  task.rs  ui.rs
src/app/: app.rs  config.rs  mod.rs
src/util/: logger.rs  mod.rs  sys.rs  updates.rs
